WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
179394
Crash in WebCore::SWServerJobQueue::scriptFetchFinished(WebCore::SWServer::Connection&, WebCore::ServiceWorkerFetchResult const&) + 77
https://bugs.webkit.org/show_bug.cgi?id=179394
Summary
Crash in WebCore::SWServerJobQueue::scriptFetchFinished(WebCore::SWServer::Co...
Ryan Haddad
Reported
2017-11-07 14:36:52 PST
LayoutTest http/tests/workers/service/service-worker-cache-api.https.html is intermittently crashing on macOS with the following backtrace: Thread 0 Crashed:: Dispatch queue: com.apple.main-thread 0 com.apple.WebCore 0x000000010521546d WebCore::SWServerJobQueue::scriptFetchFinished(WebCore::SWServer::Connection&, WebCore::ServiceWorkerFetchResult const&) + 77 (SWServerJobQueue.cpp:61) 1 com.apple.WebKit 0x0000000102fa5764 void IPC::handleMessage<Messages::WebSWServerConnection::FinishFetchingScriptInServer, WebKit::WebSWServerConnection, void (WebCore::SWServer::Connection::*)(WebCore::ServiceWorkerFetchResult const&)>(IPC::Decoder&, WebKit::WebSWServerConnection*, void (WebCore::SWServer::Connection::*)(WebCore::ServiceWorkerFetchResult const&)) + 259 (HandleMessage.h:40) 2 com.apple.WebKit 0x0000000102e0c5f3 WebKit::StorageToWebProcessConnection::didReceiveMessage(IPC::Connection&, IPC::Decoder&) + 183 (StorageToWebProcessConnection.cpp:85) 3 com.apple.WebKit 0x0000000102cd7ecb IPC::Connection::dispatchMessage(std::__1::unique_ptr<IPC::Decoder, std::__1::default_delete<IPC::Decoder> >) + 119 (Connection.cpp:930) 4 com.apple.WebKit 0x0000000102cdaa0a IPC::Connection::dispatchOneMessage() + 176 (Connection.cpp:959) 5 com.apple.JavaScriptCore 0x00000001083eba24 WTF::RunLoop::performWork() + 164 (RunLoop.cpp:107) 6 com.apple.JavaScriptCore 0x00000001083ebc42 WTF::RunLoop::performWork(void*) + 34 (RunLoopCF.cpp:39) 7 com.apple.CoreFoundation 0x00007fff8eb243e1 __CFRUNLOOP_IS_CALLING_OUT_TO_A_SOURCE0_PERFORM_FUNCTION__ + 17 8 com.apple.CoreFoundation 0x00007fff8eb0565c __CFRunLoopDoSources0 + 556 9 com.apple.CoreFoundation 0x00007fff8eb04b46 __CFRunLoopRun + 934 10 com.apple.CoreFoundation 0x00007fff8eb04544 CFRunLoopRunSpecific + 420 11 com.apple.Foundation 0x00007fff905354e2 -[NSRunLoop(NSRunLoop) runMode:beforeDate:] + 277 12 com.apple.Foundation 0x00007fff905353ba -[NSRunLoop(NSRunLoop) run] + 76 13 libxpc.dylib 0x00007fffa4a9589b _xpc_objc_main + 731 14 libxpc.dylib 0x00007fffa4a942e4 xpc_main + 494 15 com.apple.WebKit.Storage 0x0000000102c8569a main + 490 (XPCServiceMain.mm:122) 16 libdyld.dylib 0x00007fffa483c235 start + 1 Thread 1:
Attachments
Crash log
(50.88 KB, text/plain)
2017-11-07 14:37 PST
,
Ryan Haddad
no flags
Details
Patch
(2.86 KB, patch)
2017-11-16 15:45 PST
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Ryan Haddad
Comment 1
2017-11-07 14:37:25 PST
Created
attachment 326263
[details]
Crash log Attached crashlog from
https://build.webkit.org/results/Apple%20Sierra%20Release%20WK2%20(Tests)/r224544%20(5560)/results.html
Chris Dumez
Comment 2
2017-11-07 14:38:31 PST
looking
Chris Dumez
Comment 3
2017-11-07 14:42:59 PST
Looks like registration is null.
Radar WebKit Bug Importer
Comment 4
2017-11-10 14:27:07 PST
<
rdar://problem/35478190
>
Chris Dumez
Comment 5
2017-11-16 15:45:13 PST
Created
attachment 327117
[details]
Patch
Chris Dumez
Comment 6
2017-11-16 16:36:03 PST
Comment on
attachment 327117
[details]
Patch Clearing flags on attachment: 327117 Committed
r224943
: <
https://trac.webkit.org/changeset/224943
>
Chris Dumez
Comment 7
2017-11-16 16:36:05 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug